--- a/Patchy.Tool/Patchy.Tool.csproj
+++ b/Patchy.Tool/Patchy.Tool.csproj
@@ -11,4 +11,8 @@
       <ProjectReference Include="..\Patchy\Patchy.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="BsDiff" Version="1.1.0" />
+    </ItemGroup>
+
 </Project>
