--- a/Patchy/Patchy.csproj
+++ b/Patchy/Patchy.csproj
@@ -20,6 +20,7 @@
 
     <ItemGroup>
         <None Include="$(MSBuildProjectDirectory)\..\README.md" Pack="true" PackagePath="\"/>
+        <PackageReference Include="BsDiff" Version="1.1.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
