--- a/Patchy.Tool/Patchy.Tool.csproj
+++ b/Patchy.Tool/Patchy.Tool.csproj
@@ -5,6 +5,11 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <PublishSingleFile>true</PublishSingleFile>
+        <SelfContained>true</SelfContained>
+        <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
+        <!-- <PublishTrimmed>true</PublishTrimmed>
+        <TrimMode>link</TrimMode> -->
     </PropertyGroup>
 
     <ItemGroup>
