feat: Release v1.0.0 - Smart File-Level Patching Architecture
Major release marking the transition to a production-ready update system.

Breaking Changes:
- Deprecated the old "Tarball-to-Tarball" patching strategy in favor of granular file-level updates.

New Features:
- **Smart Update Package (`update.pkg`)**: Updates are now distributed as ZIP archives containing a signed manifest (`meta.json`) and specific deltas.
- **Granular Operations**: The system now supports `Add`, `Modify` (via BsDiff), and `Delete` operations per file.
- **Efficiency**: Only changed files are patched. New files are copied as-is. Deleted files are removed.
- **Integrity**: Added `PackageFileHash`, `SourceHash`, and `TargetHash` verification for every single file operation.
- **Patchy.Tool**: Added `create-update-package` command to generate these smart packages automatically.
- **Patchy Library**: Added `ApplyUpdatePackageAsync` to securely apply these packages on the client.

--- a/Patchy/Patchy.csproj
+++ b/Patchy/Patchy.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
@@ -6,7 +6,7 @@
         <Nullable>enable</Nullable>
 
         <PackageId>Patchy</PackageId>
-        <Version>0.2.4</Version>
+        <Version>1.0.0</Version>
         <Authors>MinecAnton209</Authors>
         <Company>MinecAnton209</Company>
         <Description>A simple, secure, ECDsa-based self-updater library for .NET applications.</Description>
@@ -19,7 +19,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <None Include="$(MSBuildProjectDirectory)\..\README.md" Pack="true" PackagePath="\"/>
         <PackageReference Include="BsDiff" Version="1.1.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
