--- a/Patchy/Patchy.csproj
+++ b/Patchy/Patchy.csproj
@@ -21,6 +21,7 @@
     <ItemGroup>
         <PackageReference Include="BsDiff" Version="1.1.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <None Include="..\README.md" Pack="true" PackagePath="\" />
     </ItemGroup>
 
 </Project>
